@@ -15,6 +15,8 @@ BUGFIXES
    supporting IPv6.
  * Issue 200: (Linux) psutil.NUM_CPUS not working on armel and sparc
    architectures and causing crash on module import.
+ * Issue 201: (Linux) Process.get_connections() is broken on big-endian
+   architectures.
 
 
 0.3.0 - 2011-07-08
